--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "license": "ISC",
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
-        "auto-prefixer": "^0.4.2",
         "autoprefixer": "^10.0.1",
+        "autoprefixer-loader": "^3.2.0",
         "css-loader": "^5.0.1",
         "fibers": "^5.0.0",
         "file-loader": "^6.2.0",
+        "gulp-postcss": "^9.0.0",
         "mini-css-extract-plugin": "^1.3.0",
         "node-sass": "^5.0.0",
-        "postcss-loader": "^4.0.4",
+        "postcss": "^8.1.6",
+        "postcss-cli": "^8.2.0",
+        "postcss-loader": "^3.0.0",
         "sass-loader": "^10.0.5",
         "webpack": "^5.4.0",
         "webpack-cli": "^4.2.0"
