--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
         "auto-prefixer": "^0.4.2",
-        "autoprefixer": "^10.0.1",
         "autoprefixer-loader": "^3.2.0",
         "css-loader": "^5.0.1",
         "fibers": "^5.0.0",
@@ -27,6 +26,7 @@
         "postcss": "^8.1.6",
         "postcss-cli": "^8.2.0",
         "postcss-loader": "^3.0.0",
+        "postcss-preset-env": "^6.7.0",
         "sass-loader": "^10.0.5",
         "webpack": "^5.4.0",
         "webpack-cli": "^4.2.0",
